fix(refined-github): change `letter-spacing`

--- a/refined-github/index.css
+++ b/refined-github/index.css
@@ -20,5 +20,5 @@
 .react-code-text {
   font-size: 13px;
   font-family: 'Roboto Mono', 'IBM Plex Mono', monospace !important;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.2px;
 }
